@startuml Schema_Base_Donnees_RCA

title Structure des Donnees - Application RCA

entity "Personne" {
  ID Personne (PK)
  --
  Nom, Prenom
  Adresse complete
  Email, Telephone
  Civilite
}

entity "Entreprise" {
  ID Entreprise (PK)
  --
  Nom de l'entreprise
  SIRET, SIREN
  Adresse complete
  Email, Telephone
}

entity "Exercice Financier" as Exercice {
  ID Exercice (PK)
  --
  Libelle
  Date debut / Date fin
  Statut
  Numero d'ordre
}

entity "Transaction" {
  ID Transaction (PK)
  --
  Description
  Montant
  Date de la transaction
  Numero d'ordre
  Type de compte
}

entity "Type de Transaction" as TypeTransaction {
  ID Type (PK)
  --
  Nom du type
  Description
  Type autorise
}

entity "Mode de Paiement" as ModeDePaiement {
  ID Mode (PK)
  --
  Libelle
}

entity "Utilisateur" as User {
  ID User (PK)
  --
  Nom d utilisateur
  Mot de passe
  Compte actif
}

entity "Role" {
  ID Role (PK)
  --
  Nom du role
  Description
  Niveau hierarchique
}

entity "Permission" {
  ID Permission (PK)
  --
  Nom de la permission
  Route d acces
  Description
}

Transaction ||--o{ Exercice
Transaction }o--|| TypeTransaction
Transaction }o--o| ModeDePaiement
Transaction }o--o| Personne
Transaction }o--o| Entreprise
User ||--o| Personne
User }o--o{ Role
Role }o--o{ Permission
Personne }o--o{ Entreprise

@enduml